cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/MultiProjectsErrorHighlightingTest/fifth/fifth.cpp

#define MY_CPLUS_PLUS

#include "lib_header.h"

MyClass202433_One var;

int main202433_Fifth() {
    var.foo();
    MyClass202433_Other var2;
    var2.boo();
    return 1;
}
